examples/test/testpolicy4029.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4029
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key21: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value5
          key46: value21
          key12: value38
      podSelector:
        matchLabels:
          key43: value40
